第四次更新
整理了笔记，并对测试数据集进行了处理和测试

--- a/DataExamine.ipynb
+++ b/DataExamine.ipynb
@@ -164,12 +164,217 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "f933afb0",
    "metadata": {},
+   "source": [
+    "# 检验测试集"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3de2ebd2",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_test = mnist_test.drop(columns = 'label', axis = 1)\n",
+    "y_test = mnist_test['label']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e372d12d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "37dfeaa6f9bf423989303c44b062582b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "处理测试样本:   0%|          | 0/10000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>label</th>\n",
+       "      <th>similar_index</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-56.591286</td>\n",
+       "      <td>-37.019348</td>\n",
+       "      <td>7</td>\n",
+       "      <td>53843</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-35.256073</td>\n",
+       "      <td>46.067005</td>\n",
+       "      <td>2</td>\n",
+       "      <td>28882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-62.653690</td>\n",
+       "      <td>21.441360</td>\n",
+       "      <td>1</td>\n",
+       "      <td>58741</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>57.972790</td>\n",
+       "      <td>33.670887</td>\n",
+       "      <td>0</td>\n",
+       "      <td>29044</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>27.317818</td>\n",
+       "      <td>-74.524025</td>\n",
+       "      <td>4</td>\n",
+       "      <td>52920</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           x          y  label  similar_index\n",
+       "0 -56.591286 -37.019348      7          53843\n",
+       "1 -35.256073  46.067005      2          28882\n",
+       "2 -62.653690  21.441360      1          58741\n",
+       "3  57.972790  33.670887      0          29044\n",
+       "4  27.317818 -74.524025      4          52920"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 将X_test中的所有数据转换为t-SNE二维数据\n",
+    "from tqdm.notebook import tqdm\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# 创建空数组存储结果\n",
+    "test_tsne_points = []\n",
+    "test_similar_indices = []\n",
+    "\n",
+    "# 添加进度条跟踪处理过程\n",
+    "for i in tqdm(range(len(X_test)), desc=\"处理测试样本\"):\n",
+    "    # 获取当前测试样本\n",
+    "    img = X_test.iloc[i].values\n",
+    "    \n",
+    "    # 使用img_to_tsne函数计算t-SNE坐标\n",
+    "    tsne_point, similar_idx = img_to_tsne(img, X_train, tsne_df)\n",
+    "    \n",
+    "    # 存储结果\n",
+    "    test_tsne_points.append(tsne_point)\n",
+    "    test_similar_indices.append(similar_idx)\n",
+    "\n",
+    "# 将结果转换为numpy数组\n",
+    "test_tsne_points = np.array(test_tsne_points)\n",
+    "\n",
+    "# 创建一个DataFrame来存储结果\n",
+    "test_tsne_df = pd.DataFrame({\n",
+    "    'x': test_tsne_points[:, 0],\n",
+    "    'y': test_tsne_points[:, 1],\n",
+    "    'label': y_test.values,\n",
+    "    'similar_index': test_similar_indices\n",
+    "})\n",
+    "\n",
+    "# 显示前几行结果\n",
+    "test_tsne_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0afa62fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open('data/test_tsne_df.pkl', 'wb') as f:\n",
+    "    pickle.dump(test_tsne_df, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1a1e21ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "example_tsne = test_tsne_df.iloc[2][['x', 'y']].values\n",
+    "nearest_point, nearest_label, distance = find_nearest_point(example_tsne, X, clustered_data)\n",
+    "print(nearest_label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3bf9fb90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "正确率: 0.9474\n"
+     ]
+    }
+   ],
+   "source": [
+    "right_count = 0\n",
+    "for i in range(len(test_tsne_df)):\n",
+    "    example_tsne = test_tsne_df.iloc[i][['x', 'y']].values\n",
+    "    nearest_point, nearest_label, distance = find_nearest_point(example_tsne, X, clustered_data)\n",
+    "    if (nearest_label == test_tsne_df.iloc[i]['label']):\n",
+    "        right_count += 1\n",
+    "print(f'正确率: {right_count/len(test_tsne_df)}')"
+   ]
   }
  ],
  "metadata": {
